@@ -26,6 +26,9 @@
 	<LI>HTMLDOC didn't initialize the right number of TOC
 	headings.
 
+	<LI>When using a logo image in the header, the header was
+	placed too low on the page.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.21</H2>
